fix(navigation): fix user name overflow

--- a/client/src/components/Core/Navigation/MainNavigation/MainNavigationItem.module.scss
+++ b/client/src/components/Core/Navigation/MainNavigation/MainNavigationItem.module.scss
@@ -5,9 +5,8 @@
     padding: 4px 8px 4px 8px;
     border-radius: 16px;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     text-decoration: none;
-    white-space: nowrap;
     width: 100%;
 
     border: none;
@@ -100,4 +99,5 @@
     font-size: 14px;
     color: $color-grey-80;
     margin-left: 12px;
+    margin-top: 3px;
 }
